@@ -12,7 +12,7 @@ module God
     
     extend Forwardable
     def_delegators :@process, :name, :uid, :gid, :start, :stop, :restart, :dir,
-                              :name=, :uid=, :gid=, :start=, :stop=, :restart=,  :dir=,
+                              :name=, :uid=, :gid=, :start=, :stop=, :restart=, :dir=,
                               :pid_file, :pid_file=, :log, :log=, :log_cmd, :log_cmd=, :alive?, :pid,
                               :unix_socket, :unix_socket=, :chroot, :chroot=, :env, :env=, :signal
     # 
