@@ -73,11 +73,31 @@ class TestProcessChild < Test::Unit::TestCase
     @p.log = '/tmp/foo.log'
     @p.gid = 'foobarbaz'
     
-    no_stdout do
-      no_stderr do
-        assert !@p.valid?
-      end
-    end
+    assert !@p.valid?
+  end
+
+  def test_valid_should_return_true_if_dir_exists
+    @p.start = 'qux'
+    @p.log = '/tmp/foo.log'
+    @p.dir = '/tmp'
+
+    assert @p.valid?
+  end
+
+  def test_valid_should_return_false_if_dir_does_not_exists
+    @p.start = 'qux'
+    @p.log = '/tmp/foo.log'
+    @p.dir = '/tmp/doesnotexist'
+
+    assert !@p.valid?
+  end
+
+  def test_valid_should_return_false_if_dir_is_not_a_dir
+    @p.start = 'qux'
+    @p.log = '/tmp/foo.log'
+    @p.dir = '/etc/passwd'
+
+    assert !@p.valid?
   end
 
   def test_valid_should_return_false_with_bogus_chroot
